--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
 		"svelte": "^5.0.0-next.58"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/adapter-node": "^4.0.1",
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/eslint": "8.56.2",
+		"@types/node": "^20.11.19",
 		"@typescript-eslint/eslint-plugin": "^7.0.1",
 		"@typescript-eslint/parser": "^7.0.1",
 		"eslint": "^8.56.0",
@@ -26,12 +27,12 @@
 		"eslint-plugin-svelte": "^2.36.0-next.4",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.1",
+		"sass": "^1.71.0",
 		"svelte": "^5.0.0-next.58",
 		"svelte-check": "^3.6.4",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^5.1.3",
-		"sass": "^1.71.0"
+		"vite": "^5.1.3"
 	},
 	"type": "module"
 }
