--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
 		"typescript": "^5.3.3",
 		"vite": "^5.1.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@trpc/client": "^10.45.1",
+		"@trpc/server": "^10.45.1",
+		"trpc-sveltekit": "^3.5.26",
+		"zod": "^3.22.4"
+	}
 }
