--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "svelte-check": "^3.6.6",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "firebase": "^10.8.1",
+    "@firebase/firestore": "^4.4.3",
+    "@firebase/auth": "^1.6.1"
   },
   "type": "module",
   "dependencies": {
