--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "vite": "^5.1.6",
     "firebase": "^10.8.1",
     "@firebase/firestore": "^4.4.3",
-    "@firebase/auth": "^1.6.1"
+    "@firebase/auth": "^1.6.1",
+    "color": "^4.2.3",
+    "@types/color": "^3.0.6"
   },
   "dependencies": {
     "zod": "^3.22.4"
