--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "useTabs": false,
-  "singleQuote": true,
-  "trailingComma": "none",
   "printWidth": 120,
+  "useTabs": false,
+  "trailingComma": "all",
+  "singleQuote": true,
+  "semi": true,
+  "svelteSortOrder": "options-scripts-markup-styles",
   "plugins": ["prettier-plugin-svelte"],
   "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
