--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "deploy": "npm run build && firebase deploy"
   },
   "overrides": {
-    "svelte": "5.0.0-next.95"
+    "svelte": "5.0.0-next.107"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.2.0",
-    "@sveltejs/kit": "^2.5.5",
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@types/eslint": "8.56.7",
-    "@types/node": "^20.12.5",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
-    "eslint": "^8.56.0",
+    "@sveltejs/kit": "^2.5.6",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@types/eslint": "8.56.9",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint": "^8.56.9",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0-next.13",
+    "eslint-plugin-svelte": "^2.37.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.2",
-    "sass": "^1.74.1",
-    "svelte": "5.0.0-next.95",
+    "prettier-plugin-svelte": "^3.2.3",
+    "sass": "^1.75.0",
+    "svelte": "5.0.0-next.107",
     "svelte-check": "^3.6.9",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.4",
-    "vite": "^5.2.8",
-    "firebase": "^10.10.0",
-    "@firebase/firestore": "^4.5.1",
-    "@firebase/auth": "^1.7.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.9",
+    "firebase": "^10.11.0",
+    "@firebase/firestore": "^4.6.0",
+    "@firebase/auth": "^1.7.1",
     "@types/color": "^3.0.6"
   },
   "dependencies": {
